--- a/css/style.css
+++ b/css/style.css
@@ -2,27 +2,92 @@
 
 #body { margin:0; padding:0; }
 
-#map {
-position: absolute;
-top: 0;
-bottom: 0;
-width: 100%;
+
+#map{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 90%;
+	height: 90%;
 }
 
-#instructions {
-position: absolute;
-margin: 20px;
-width: 25%;
-top: 0;
-bottom: 20%;
-padding: 20px;
-background-color: rgba(255, 255, 255, 0.9);
-overflow-y: scroll;
-font-family: sans-serif;
-font-size: 0.8em;
-line-height: 2em;
+
+.map-overlay {
+	font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+	position: absolute;
+	width: 200px;
+	top: 0;
+	left: 0;
+	padding: 10px;
 }
 
-.duration {
-font-size: 2em;
+.map-overlay .map-overlay-inner {
+	background-color: #fff;
+	box-shadow:0 1px 2px rgba(0, 0, 0, 0.10);
+	border-radius: 3px;
+	padding: 10px;
+    margin-bottom: 10px;
+    position: absolute;
+	bottom: 40px;
+	left: 10px;
 }
+
+#size {
+	border: none;
+	padding: 0;
+	margin: 0 0 10px;
+	position: absolute;
+	bottom: 20px;
+	right: 10px;
+}
+
+#state {
+	border: none;
+	padding: 0;
+	margin: 0 0 10px;
+	position: absolute;
+	bottom: 20px;
+	right: 100px;
+}
+
+
+.map-overlay-inner fieldset:last-child {
+	margin: 0;
+}
+
+.map-overlay-inner select {
+	width: 100%;
+}
+
+.map-overlay-inner label {
+	display: block;
+	font-weight: bold;
+	margin: 0 0 5px;
+}
+
+.map-overlay-inner button {
+	display: inline-block;
+	width: 36px;
+	height: 20px;
+	border: none;
+	cursor: pointer;
+}
+
+#MapChange {
+	display: inline-block;
+	width: 60px;
+	height: 20px;
+	border: none;
+	cursor: pointer;
+}
+
+
+.map-overlay-inner button:focus {
+	outline: none;
+}
+
+.map-overlay-inner button:hover {
+	box-shadow:inset 0 0 0 3px rgba(0, 0, 0, 0.10);
+}
+
+
