--- a/css/style_background.css
+++ b/css/style_background.css
@@ -7,8 +7,8 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
+	width: 90%;
+	height: 90%;
 }
 
 
@@ -32,14 +32,24 @@
 	left: 10px;
 }
 
-.map-overlay-inner fieldset {
+#size {
 	border: none;
 	padding: 0;
 	margin: 0 0 10px;
 	position: absolute;
-	bottom: 40px;
-	left: 10px;
+	bottom: 20px;
+	right: 10px;
 }
+
+#state {
+	border: none;
+	padding: 0;
+	margin: 0 0 10px;
+	position: absolute;
+	bottom: 20px;
+	right: 100px;
+}
+
 
 .map-overlay-inner fieldset:last-child {
 	margin: 0;
@@ -78,21 +88,6 @@
 
 .map-overlay-inner button:hover {
 	box-shadow:inset 0 0 0 3px rgba(0, 0, 0, 0.10);
-}
-
-
-.coordinates {
-	background: rgba(0, 0, 0, 0.5);
-	color: #fff;
-	position: absolute;
-	bottom: 40px;
-	left: 10px;
-	padding: 5px 10px;
-	margin: 0;
-	font-size: 11px;
-	line-height: 18px;
-	border-radius: 3px;
-	display: none;
 }
 
 
