--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 90%;
-	height: 90%;
+	width: 100%;
+	height: 100%;
 }
 
 
@@ -39,6 +39,7 @@
 	position: absolute;
 	bottom: 20px;
 	right: 10px;
+	color: white
 }
 
 #state {
@@ -48,6 +49,7 @@
 	position: absolute;
 	bottom: 20px;
 	right: 100px;
+	color: white
 }
 
 
