--- a/css/style.css
+++ b/css/style.css
@@ -32,15 +32,16 @@
 	left: 10px;
 }
 
-#size {
+#country {
 	border: none;
 	padding: 0;
 	margin: 0 0 10px;
 	position: absolute;
 	bottom: 20px;
-	right: 10px;
+	right: 100px;
 	color: white
 }
+
 
 #state {
 	border: none;
