--- a/css/style_background.css
+++ b/css/style_background.css
@@ -2,7 +2,6 @@
 
 #body { margin:0; padding:0; }
 
-
 #map{
 	position: absolute;
 	top: 0;
@@ -11,7 +10,6 @@
 	height: 100%;
 }
 
-
 .map-overlay {
 	font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
 	position: absolute;
@@ -19,78 +17,48 @@
 	top: 0;
 	left: 0;
 	padding: 10px;
-}
-
-.map-overlay .map-overlay-inner {
+	}
+	 
+	.map-overlay .map-overlay-inner {
 	background-color: #fff;
-	box-shadow:0 1px 2px rgba(0, 0, 0, 0.10);
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 	border-radius: 3px;
 	padding: 10px;
-    margin-bottom: 10px;
-    position: absolute;
-	bottom: 40px;
-	left: 10px;
-}
-
-#country {
+	margin-bottom: 10px;
+	}
+	 
+	.map-overlay-inner fieldset {
 	border: none;
 	padding: 0;
 	margin: 0 0 10px;
-	position: absolute;
-	bottom: 20px;
-	right: 100px;
-	color: white
-}
-
-
-#state {
-	border: none;
-	padding: 0;
-	margin: 0 0 10px;
-	position: absolute;
-	bottom: 20px;
-	right: 100px;
-	color: white
-}
-
-
-.map-overlay-inner fieldset:last-child {
+	}
+	 
+	.map-overlay-inner fieldset:last-child {
 	margin: 0;
-}
-
-.map-overlay-inner select {
+	}
+	 
+	.map-overlay-inner select {
 	width: 100%;
-}
-
-.map-overlay-inner label {
+	}
+	 
+	.map-overlay-inner label {
 	display: block;
 	font-weight: bold;
 	margin: 0 0 5px;
-}
-
-.map-overlay-inner button {
+	}
+	 
+	.map-overlay-inner button {
 	display: inline-block;
 	width: 36px;
 	height: 20px;
 	border: none;
 	cursor: pointer;
-}
-
-#MapChange {
-	display: inline-block;
-	width: 60px;
-	height: 20px;
-	border: none;
-	cursor: pointer;
-}
-
-
-.map-overlay-inner button:focus {
+	}
+	 
+	.map-overlay-inner button:focus {
 	outline: none;
-}
-
-.map-overlay-inner button:hover {
-	box-shadow:inset 0 0 0 3px rgba(0, 0, 0, 0.10);
-}
-
-
+	}
+	 
+	.map-overlay-inner button:hover {
+	box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.1);
+	}
