--- a/css/style_responsible.css
+++ b/css/style_responsible.css
@@ -1,5 +1,5 @@
 @charset "utf-8"
-#body { margin:0; padding:0; font-family: "A1 Gothic R";}
+body { margin:0; padding:0; font-family: "A1 Gothic R";}
 
 
 
