--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
 @charset "utf-8"
-body { margin:0; padding:0; font-family: "A1 Gothic R";}
-
-
-
+body { margin:0; padding:0; }
 
 
 /* ウィンドウサイズが480px以上のときはここを読み込む */
@@ -175,19 +172,7 @@ body { margin:0; padding:0; font-family: "A1 Gothic R";}
         height: 80%;
     }
 
-    .EditPanel_PC{
-        position: absolute;
-        top: 100px;
-        right: 150px;
-        width: 15%;
-        height: 30%;
-    }
-
-
-
-
-
-    .main .CheckBox {
+    .main .EditPanel_PC {
         position: absolute;
         top: 100px;
         right: 150px;
@@ -252,28 +237,6 @@ body { margin:0; padding:0; font-family: "A1 Gothic R";}
         background: #84ff92;
         left: -1.1em;
     }
-
-
-
-    .active {
-    }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     .map-overlay {
         font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
