--- a/css/style_responsible.css
+++ b/css/style_responsible.css
@@ -81,6 +81,7 @@ body { margin:0; padding:0; }
 }
 
 
+
 /* ウィンドウサイズが480px以上1024px以下のときはここを読み込む */
 
 @media screen and (min-width:768px) and (max-width:1024px){
@@ -160,54 +161,51 @@ body { margin:0; padding:0; }
 }
 
 
+
 /* ウィンドウサイズが1024px以上のときはここを読み込む */
 
 @media screen and (min-width:1024px){
 
-    #map{
-        position: absolute;
-        top: 100px;
-        left: 100px;
-        width: 60%;
-        height: 80%;
-    }
-
-    .main .EditPanel_PC {
+    /* 画面右側の設定パネルについて */
+    
+    .main .EditPanel1_PC {
         position: absolute;
         top: 100px;
         right: 150px;
     }
 
-    .main h3 {
+    /* トグルスイッチについて */
+
+    .EditPanel1_PC h3 {
         font-size: 1.5rem;
         border-bottom: 7px double #ccc;
         text-align: center;
         margin: 2rem auto;
     }
 
-    .main .item-frame {
+    .EditPanel1_PC .item-frame {
         margin: 1rem auto;
     }
 
-    .main .text {
+    .EditPanel1_PC .text {
         vertical-align: middle;
     }
 
-    .main label {
+    .EditPanel1_PC label {
         cursor: pointer;
     }
 
-    .main .switch {
+    .EditPanel1_PC .switch {
         position: relative;
     }
 
-    .main .switch:before, .main .switch:after {
+    .EditPanel1_PC .switch:before, .EditPanel1_PC .switch:after {
         content: '';
         vertical-align: middle;
         display: inline-block;
     }
     
-    .main .switch:before {
+    .EditPanel1_PC .switch:before {
         width: 2em;
         height: 1em;
         border: 2px solid #C4C9FF;
@@ -215,7 +213,7 @@ body { margin:0; padding:0; }
         background: #999;
     }
 
-    .main .switch:after {
+    .EditPanel1_PC .switch:after {
         position: relative;
         width: 1em;
         height: 1em;
@@ -224,18 +222,53 @@ body { margin:0; padding:0; }
         left: -2.2em;
     }
 
-    .main input { 
+    .EditPanel1_PC input { 
         display: none;
     }
 
-    .main input:checked ~ .switch:before {
+    .EditPanel1_PC input:checked ~ .switch:before {
         background: #00b715;
         border-color: #84ff92;
     }
       
-    .main input:checked ~ .switch:after {
+    .EditPanel1_PC input:checked ~ .switch:after {
         background: #84ff92;
         left: -1.1em;
+    }
+
+
+    /* 画面右側の設定パネルについて */
+    
+    .main .EditPanel2_PC {
+        position: absolute;
+        bottom: 100px;
+        right: 150px;
+    }
+
+
+    /* スライダーについて */
+
+    .main .EditPanel2_PC .Label-Size-Slider {
+        -webkit-appearance: none; /* 🚩これ無しだとスタイルがほぼ全く反映されないので注意 */
+        appearance: none;
+        cursor: pointer; /* カーソルを分かりやすく */
+        outline: none; /* スライダーのアウトラインは見た目がキツイので消す */
+        height: 14px; /* バーの高さ */
+        width: 100%; /* バーの幅 */
+        background: #8acdff; /* バーの背景色 */
+        border-radius: 10px; /* バーの両端の丸み */
+        border: solid 3px #dff1ff; /* バー周囲の線 */
+    }
+
+
+    /* 地図について */
+
+    #map{
+        position: absolute;
+        top: 100px;
+        left: 100px;
+        width: 60%;
+        height: 80%;
     }
 
     .map-overlay {
