--- a/css/style_responsible.css
+++ b/css/style_responsible.css
@@ -1,5 +1,5 @@
 @charset "utf-8"
-body { margin:0; padding:0; }
+body { margin:0; padding:0; font-family: 'M PLUS Rounded 1c', sans-serif;}
 
 
 /* ウィンドウサイズが480px以上のときはここを読み込む */
@@ -85,6 +85,10 @@ body { margin:0; padding:0; }
 /* ウィンドウサイズが480px以上1024px以下のときはここを読み込む */
 
 @media screen and (min-width:768px) and (max-width:1024px){
+
+    h1{
+        font-family: 'M PLUS Rounded 1c', sans-serif;
+    }
 
     #map{
         position: absolute;
@@ -264,64 +268,12 @@ body { margin:0; padding:0; }
     /* 地図について */
 
     #map{
+        font-family: 'M PLUS Rounded 1c', sans-serif;
         position: absolute;
         top: 100px;
         left: 100px;
         width: 60%;
         height: 80%;
-    }
-
-    .map-overlay {
-        font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-        position: absolute;
-        width: 200px;
-        top: 0;
-        left: 0;
-        padding: 10px;
-    }
-        
-    .map-overlay .map-overlay-inner {
-        background-color: #fff;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-        border-radius: 3px;
-        padding: 10px;
-        margin-bottom: 10px;
-    }
-        
-    .map-overlay-inner fieldset {
-        border: none;
-        padding: 0;
-        margin: 0 0 10px;
-    }
-        
-    .map-overlay-inner fieldset:last-child {
-        margin: 0;
-    }
-        
-    .map-overlay-inner select {
-        width: 100%;
-    }
-        
-    .map-overlay-inner label {
-        display: block;
-        font-weight: bold;
-        margin: 0 0 5px;
-    }
-        
-    .map-overlay-inner button {
-        display: inline-block;
-        width: 36px;
-        height: 20px;
-        border: none;
-        cursor: pointer;
-    }
-        
-    .map-overlay-inner button:focus {
-        outline: none;
-    }
-        
-    .map-overlay-inner button:hover {
-        box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.1);
     }
 
 
