--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "utf-8"
-body { margin:0; padding:0; }
+body { margin:0; padding:0; font-family: 'M PLUS Rounded 1c', sans-serif;}
 
 
 /* ウィンドウサイズが480px以上のときはここを読み込む */
