--- a/css/style_responsible.css
+++ b/css/style_responsible.css
@@ -1,5 +1,5 @@
 @charset "utf-8"
-body { margin:0; padding:0; font-family: 'M PLUS Rounded 1c', sans-serif;}
+body { margin:0; padding:0;}
 
 
 /* ウィンドウサイズが480px以上のときはここを読み込む */
@@ -181,6 +181,7 @@ body { margin:0; padding:0; font-family: 'M PLUS Rounded 1c', sans-serif;}
     /* トグルスイッチについて */
 
     .EditPanel1_PC h3 {
+        font-family: 'M PLUS Rounded 1c', sans-serif;
         font-size: 1.5rem;
         border-bottom: 7px double #ccc;
         text-align: center;
@@ -268,7 +269,6 @@ body { margin:0; padding:0; font-family: 'M PLUS Rounded 1c', sans-serif;}
     /* 地図について */
 
     #map{
-        font-family: 'M PLUS Rounded 1c', sans-serif;
         position: absolute;
         top: 100px;
         left: 100px;
