--- a/css/style_responsible.css
+++ b/css/style_responsible.css
@@ -2,9 +2,23 @@
 body { margin:0; padding:0;}
 
 
-/* ウィンドウサイズが480px以上のときはここを読み込む */
 
-@media screen and (min-width:200px){
+/*  全環境に共通の設定（モバイルファースト） */
+
+.EditPanel_PC {
+    display: none;
+}
+
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+ }
+
+
+/* タブレット用、ウィンドウサイズが600px以上のときはここを読み込む */
+
+@media screen and (min-width:480px){
 
     #map{
         position: absolute;
@@ -68,107 +82,20 @@ body { margin:0; padding:0;}
     }
 
 
-    #reset {
-        display: inline-block;
-        width: 100px;
-        height: 30px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.1);
+    /* 設定画面ボタンについて */
+
+    #ControlPanelOpen{
+        position: absolute;
+        top: 10px;
+        left: 20px;
     }
 	 
-}
-
-
-
-/* ウィンドウサイズが480px以上1024px以下のときはここを読み込む */
-
-@media screen and (min-width:768px) and (max-width:1024px){
-
-    h1{
-        font-family: 'M PLUS Rounded 1c', sans-serif;
+    /* 画面右側の設定パネルについて */
+    
+    .main .EditPanel1_PC {
+        display: none;
     }
 
-    #map{
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
-
-    .map-overlay {
-        font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-        position: absolute;
-        width: 200px;
-        top: 0;
-        left: 0;
-        padding: 10px;
-    }
-        
-    .map-overlay .map-overlay-inner {
-        background-color: #fff;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-        border-radius: 3px;
-        padding: 10px;
-        margin-bottom: 10px;
-    }
-        
-    .map-overlay-inner fieldset {
-        border: none;
-        padding: 0;
-        margin: 0 0 10px;
-    }
-        
-    .map-overlay-inner fieldset:last-child {
-        margin: 0;
-    }
-        
-    .map-overlay-inner select {
-        width: 100%;
-    }
-        
-    .map-overlay-inner label {
-        display: block;
-        font-weight: bold;
-        margin: 0 0 5px;
-    }
-        
-    .map-overlay-inner button {
-        display: inline-block;
-        width: 36px;
-        height: 20px;
-        border: none;
-        cursor: pointer;
-    }
-        
-    .map-overlay-inner button:focus {
-    outline: none;
-        }
-        
-    .map-overlay-inner button:hover {
-        box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.1);
-    }
-
-
-    #reset {
-        display: inline-block;
-        width: 100px;
-        height: 30px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.1);
-    }
-	 
-}
-
-
-
-/* ウィンドウサイズが1024px以上のときはここを読み込む */
-
-@media screen and (min-width:1024px){
 
     /* 画面右側の設定パネルについて */
     
@@ -253,7 +180,7 @@ body { margin:0; padding:0;}
 
     /* スライダーについて */
 
-    .main .EditPanel2_PC .Label-Size-Slider {
+    .EditPanel2_PC .Label-Size-Slider {
         -webkit-appearance: none; /* 🚩これ無しだとスタイルがほぼ全く反映されないので注意 */
         appearance: none;
         cursor: pointer; /* カーソルを分かりやすく */
@@ -265,15 +192,139 @@ body { margin:0; padding:0;}
         border: solid 3px #dff1ff; /* バー周囲の線 */
     }
 
+}
+
+
+
+
+/* PC用、ウィンドウサイズが1024px以上のときはここを読み込む */
+
+@media screen and (min-width:1024px){
+
+
 
     /* 地図について */
 
-    #map{
+    #map {
         position: absolute;
-        top: 100px;
-        left: 100px;
-        width: 60%;
-        height: 80%;
+        top: 50px;
+        left: 50px;
+        width: 70%;
+        height: 90%;
+    }
+
+    
+
+
+    /* 設定画面ボタンについて */
+
+    #ControlPanelOpen {
+        display: none;
+    }
+
+    .EditPanel1_PC {
+        display: block;
+        padding: 10px;
+        float: right;
+      }
+
+    /* トグルスイッチについて */
+
+    .EditPanel1_PC h3 {
+        font-family: 'M PLUS Rounded 1c', sans-serif;
+        font-size: 1.5rem;
+        border-bottom: 7px double #ccc;
+        text-align: center;
+        margin: 2rem auto;
+    }
+
+    .EditPanel1_PC .item-frame {
+        margin: 1rem auto;
+    }
+
+    .EditPanel1_PC .text {
+        vertical-align: middle;
+    }
+
+    .EditPanel1_PC label {
+        cursor: pointer;
+    }
+
+    .EditPanel1_PC .switch {
+        position: relative;
+    }
+
+    .EditPanel1_PC .switch:before, .EditPanel1_PC .switch:after {
+        content: '';
+        vertical-align: middle;
+        display: inline-block;
+    }
+    
+    .EditPanel1_PC .switch:before {
+        width: 2em;
+        height: 1em;
+        border: 2px solid #C4C9FF;
+        border-radius: 32px;
+        background: #999;
+    }
+
+    .EditPanel1_PC .switch:after {
+        position: relative;
+        width: 1em;
+        height: 1em;
+        background: #C4C9FF;
+        border-radius: 50%;
+        left: -2.2em;
+    }
+
+    .EditPanel1_PC input { 
+        display: none;
+    }
+
+    .EditPanel1_PC input:checked ~ .switch:before {
+        background: #00b715;
+        border-color: #84ff92;
+    }
+      
+    .EditPanel1_PC input:checked ~ .switch:after {
+        background: #84ff92;
+        left: -1.1em;
+    }
+
+    /* スライダーについて */
+
+    .EditPanel2_PC {
+        float: right;
+    }
+
+    .EditPanel2_PC h3 {
+        font-family: 'M PLUS Rounded 1c', sans-serif;
+        font-size: 1.5rem;
+        border-bottom: 7px double #ccc;
+        text-align: center;
+        margin: 2rem auto;
+    }
+
+    .EditPanel2_PC .text {
+        vertical-align: middle;
+    }
+    
+    .EditPanel2_PC label {
+        cursor: pointer;
+    }
+
+
+
+    .EditPanel2_PC .Label-Size-Slider {
+        -webkit-appearance: none; /* 🚩これ無しだとスタイルがほぼ全く反映されないので注意 */
+        appearance: none;
+        cursor: pointer; /* カーソルを分かりやすく */
+        outline: none; /* スライダーのアウトラインは見た目がキツイので消す */
+        height: 14px; /* バーの高さ */
+        width: 100%; /* バーの幅 */
+        background: #8acdff; /* バーの背景色 */
+        border-radius: 10px; /* バーの両端の丸み */
+        border: solid 3px #dff1ff; /* バー周囲の線 */
     }
 
 
