--- a/css/style_responsible.css
+++ b/css/style_responsible.css
@@ -5,20 +5,7 @@ body { margin:0; padding:0;}
 
 /*  全環境に共通の設定（モバイルファースト） */
 
-.EditPanel_PC {
-    display: none;
-}
-
-.clearfix::after {
-    content: "";
-    display: block;
-    clear: both;
- }
-
-
-/* タブレット用、ウィンドウサイズが600px以上のときはここを読み込む */
-
-@media screen and (min-width:480px){
+    /*  地図について */
 
     #map{
         position: absolute;
@@ -81,6 +68,166 @@ body { margin:0; padding:0;}
         box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.1);
     }
 
+
+    /*  トグルスイッチについて */
+
+    .EditPane1_PC {
+        display: none;
+    }
+
+    /*  スライダーについて */
+
+    .EditPane2_PC {
+        display: none;
+    }
+
+    /*  ドロワーメニューについて */
+
+    .wrapper {
+        height: 100%;
+        overflow-x: hidden;
+        position: relative;
+    }
+
+    .overlay {
+        content: "";
+        display: block;
+        width: 0;
+        height: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 2;
+        opacity: 0;
+        transition: opacity .5s;
+    }
+
+    .overlay.open {
+        width: 100%;
+        height: 100%;
+        opacity: 1;
+    }
+
+    main {
+        height: 100%;
+        min-height: 100vh;
+        padding: 0 50px;
+        background-color: #eee;
+        transition: all .5s;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    main h1 {
+        text-align: center;
+        font-weight: 500;
+    }
+
+    main p {
+        text-align: center;
+    }
+
+    .menu-trigger {
+        display: inline-block;
+        width: 36px;
+        height: 28px;
+        vertical-align: middle;
+        cursor: pointer;
+        position: fixed;
+        top: 30px;
+        right: 30px;
+        z-index: 100;
+        transform: translateX(0);
+        transition: transform .5s;
+    }
+
+    .menu-trigger.active {
+        transform: translateX(-250px);
+    }
+
+    .menu-trigger span {
+        display: inline-block;
+        box-sizing: border-box;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background-color: #000;
+    }
+
+    .menu-trigger.active span {
+        background-color: #fff;
+    }
+
+    .menu-trigger span:nth-of-type(1) {
+        top: 0;
+    }
+
+    .menu-trigger.active span:nth-of-type(1) {
+        transform: translateY(12px) rotate(-45deg);
+    }
+
+    .menu-trigger span:nth-of-type(2) {
+        top: 12px;
+    }
+
+    .menu-trigger.active span:nth-of-type(2) {
+        opacity: 0;
+    }
+
+    .menu-trigger span:nth-of-type(3) {
+        bottom: 0;
+    }
+
+    .menu-trigger.active span:nth-of-type(3) {
+        transform: translateY(-12px) rotate(45deg);
+    }
+    
+    nav {
+        width: 250px;
+        height: 100%;
+        padding-top: 100px;
+        background-color: rgb(16, 69, 153, 0.8);
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index: 10;
+        transform: translate(250px);
+        transition: all .5s;
+    }
+
+    nav.open {
+        transform: translateZ(0);
+    }
+    
+    nav li {
+        color: #fff;
+        text-align: center;
+        padding: 10px 0;
+    }
+    
+    * {
+        box-sizing: border-box;
+    }
+
+    ul {
+        list-style: none;
+    }
+
+    /*  フロート時の回り込み防止のための記述 */
+
+    .clearfix::after {
+        content: "";
+        display: block;
+        clear: both;
+    }
+
+
+/* タブレット用、ウィンドウサイズが600px以上のときはここを読み込む */
+
+@media screen and (min-width:480px){
 
     /* 設定画面ボタンについて */
 
@@ -193,8 +340,6 @@ body { margin:0; padding:0;}
     }
 
 }
-
-
 
 
 /* PC用、ウィンドウサイズが1024px以上のときはここを読み込む */
