--- a/css/style.css
+++ b/css/style.css
@@ -205,79 +205,48 @@ body {
 
     /* スライドメニュー内の設定パネルについて */
     
-    .EditPanel_SP {
-        position: absolute;
+    .EditPanel1 h3 {
+      font-size: 1.5rem;
+      border-bottom: 7px double #ccc;
+      text-align: center;
+      margin: 2rem auto;
+      color: white;
     }
 
-    /* スライドメニュー内のトグルスイッチについて */
-
-    .EditPanel_SP h3 {
-        font-family: 'M PLUS Rounded 1c', sans-serif;
-        font-size: 1.5rem;
-        border-bottom: 7px double #ccc;
-        text-align: center;
-        margin: 2rem auto;
-        color: white;
+    .EditPanel1 .item-frame {
+      margin: 1rem auto;
     }
 
-    .EditPanel_SP .item-frame {
-        margin: 1rem auto;
+    .EditPanel1 .text {
+      vertical-align: middle;
+      color: white;
     }
 
-    .EditPanel_SP .text {
-        vertical-align: middle;
+    .EditPanel1 label {
+      cursor: pointer;
     }
 
-    .EditPanel_SP label {
-        cursor: pointer;
-        color: white;
+    /* スライドメニュー内のスライダーについて */
+
+    .EditPanel2 h3 {
+      font-family: 'M PLUS Rounded 1c', sans-serif;
+      font-size: 1.5rem;
+      border-bottom: 7px double #ccc;
+      text-align: center;
+      margin: 2rem auto;
+      color: white;
     }
 
-    .EditPanel_SP .switch {
-        position: relative;
+    .EditPanel2 .text {
+      vertical-align: middle;
     }
-
-    .EditPanel_SP .switch:before, .EditPanel_SP .switch:after {
-        content: '';
-        vertical-align: middle;
-        display: inline-block;
-    }
-    
-    .EditPanel_SP .switch:before {
-        width: 2em;
-        height: 1em;
-        border: 2px solid #C4C9FF;
-        border-radius: 32px;
-        background: #999;
-    }
-
-    .EditPanel_SP .switch:after {
-        position: relative;
-        width: 1em;
-        height: 1em;
-        background: #C4C9FF;
-        border-radius: 50%;
-        left: -2.2em;
-    }
-
-    .EditPanel_SP input { 
-        display: none;
-    }
-
-    .EditPanel_SP input:checked ~ .switch:before {
-        background: #00b715;
-        border-color: #84ff92;
-    }
-      
-    .EditPanel_SP input:checked ~ .switch:after {
-        background: #84ff92;
-        left: -1.1em;
+  
+    .EditPanel2 label {
+      cursor: pointer;
     }
 
 
-    /* スライダーについて */
-
-    .EditPanel_SP .Label-Size-Slider {
+    .EditPanel_SP .EditPanel2 .Label-Size-Slider {
         -webkit-appearance: none; /* 🚩これ無しだとスタイルがほぼ全く反映されないので注意 */
         appearance: none;
         cursor: pointer; /* カーソルを分かりやすく */
@@ -289,7 +258,6 @@ body {
         border: solid 3px #dff1ff; /* バー周囲の線 */
     }
 
-}
 
 
     /*  フロート時の回り込み防止のための記述 */
@@ -504,7 +472,7 @@ body {
 
     #EditPanel_PC {
         display: block;
-        width: 300px;
+        width: 700px;
         height: 550px;
         padding: 10px;
         float: right;
@@ -669,6 +637,7 @@ body {
       border-bottom: 7px double #ccc;
       text-align: center;
       margin: 0.5rem auto;
+      color: black;
     }
   
     .EditPanel1 .item-frame {
@@ -677,6 +646,7 @@ body {
   
     .EditPanel1 .text {
       vertical-align: middle;
+      color: black;
     }
   
     .EditPanel1 label {
@@ -738,6 +708,7 @@ body {
         border-bottom: 7px double #ccc;
         text-align: center;
         margin: 0.5rem auto;
+        color: black;
     }
 
     .EditPanel2 .text {
@@ -759,6 +730,5 @@ body {
         border-radius: 10px; /* バーの両端の丸み */
         border: solid 3px #dff1ff; /* バー周囲の線 */
     }
-
 
 
